--- a/pmschool/pc.html
+++ b/pmschool/pc.html
@@ -52,7 +52,7 @@
   <div class="card mb-3" style="background-color: #ffe6e6;">
     <div class="row no-gutters">
       <div class="col-lg-2">
-        <img src="./Challenge4.jpg" style="width:90px;height:60px;" class="card-img" alt="...">
+        <img src="./Challenge4.jpg" style="width:90px;height:60px;" class="card-img" alt="utube">
       </div>
         <div class="col-lg-8" style="margin:auto;">
           <h5 class="card-title">Weekend Challenge 24 - Problem Statement</h5>
