made few changes

--- a/pmschool/faqs.html
+++ b/pmschool/faqs.html
@@ -36,7 +36,7 @@
             </ul>
 
             <div class="login">
-              <a href="./login.html" style="text-decoration:none;">Log in</a>
+                  <button type="button"  class="btn btn-outline-secondary"><a href="./login.html" style="text-decoration:none;color:black;">Log in</a></button>
 
             </div>
 
