--- a/pmschool/pc.html
+++ b/pmschool/pc.html
@@ -45,22 +45,42 @@
         </nav>
       </section>
 
+
+      <section class="challenges">
+
+        <div class="card mb-3" style="">
+          <div class="row no-gutters" >
+              <div class="col-lg-5" style="margin:auto;text-align:center;">
+            <h2 class="card-title"><i class="fa fa-star" aria-hidden="true"></i>Ready to take the challenge??<i class="fa fa-star" aria-hidden="true"></i></h2>
+                <h4>
+                  Learn | Assess | Get Hired
+                </h4>
+              </div>
+              <div class="col-lg-7" style="margin:auto;text-align:center;">
+                <img src="./content_img.jpg" width="350px"/>
+             </div>
+          </div>
+        </div>
+
+
+      </section>
+
 <section class="challenges" id="livechallenges">
 <p>
   Ongoing challenges
   </p>
   <div class="card mb-3" style="background-color: #ffe6e6;">
-    <div class="row no-gutters">
-      <div class="col-lg-2">
-        <img src="./Challenge4.jpg" style="width:90px;height:60px;" class="card-img" alt="utube">
+    <div class="row no-gutters" >
+      <div class="col-lg-2" style="margin:auto;">
+        <img src="./Challenge4.jpg" style="width:90px;height:60px;" class="card-img" alt="...">
       </div>
         <div class="col-lg-8" style="margin:auto;">
           <h5 class="card-title">Weekend Challenge 24 - Problem Statement</h5>
         </div>
-        <div class="col-lg-2" style="margin:auto;">
+        <div class="col-lg-2" style="margin:auto;text-align:center;">
           <a href="#" class="btn btn-warning"><li class="fa fa-clock-o"></li>&nbsp; participate</a>
           <p>
-          &nbsp; &nbsp;ends in 2 days
+          ends on dd/mm.
           </p>
        </div>
     </div>
@@ -79,10 +99,10 @@
     <div class="col-lg-2">
       <img src="./Challenge1.jpg" style="width:80px;height:80px;" class="card-img" alt="...">
     </div>
-      <div class="col-lg-8" style="margin:auto;">
+      <div class="col-lg-8 " style="margin:auto;">
         <h5 class="card-title">Weekend Challenge 23 - Problem Statement</h5>
       </div>
-      <div class="col-lg-2" style="margin:auto;">
+      <div class="col-lg-2 " style="margin:auto;">
         <a href="#" class="btn btn-success">solutions</a>
      </div>
   </div>
